feat: Propagated build time per unit to resource domain model and dto
