# api/swagger.yaml
@@ -329,6 +329,9 @@ components:
       type: object
     dtos.ResourceDtoResponse:
       properties:
+        build_time_hours_per_unit:
+          minimum: 1
+          type: number
         created_at:
           format: date-time
           type: string
@@ -339,12 +342,16 @@ components:
           example: metal
           type: string
         start_amount:
+          minimum: 1
           type: integer
         start_production:
+          minimum: 0
           type: integer
         start_storage:
+          minimum: 1
           type: integer
       required:
+      - build_time_hours_per_unit
       - created_at
       - id
       - name
@@ -371,10 +378,13 @@ components:
     dtos.TopologyDtoResponse:
       properties:
         galaxies:
+          minimum: 1
           type: integer
         orbits:
+          minimum: 1
           type: integer
         solar_systems:
+          minimum: 1
           type: integer
       required:
       - galaxies
